examples/test/testpolicy7809.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy7809
  namespace: namespace329
spec:
  podSelector:
    matchLabels:
      key8: value24
      key13: value16
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key8: value40
          key43: value10
          key15: value8
      podSelector:
        matchLabels:
          key2: value20
          key8: value4
